# email-triage-openenv

./: Dockerfile  Dockerfile.txt  README.md  app.py  env.py  inference.py  interference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
