[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-openenv"
version = "0.1.0"
description = "Email Triage RL Environment"
dependencies = [
    "openenv",
    "pydantic",
    "uvicorn",
    "fastapi",
    "openai",
    "requests"
]

# This satisfies the "Missing [project.scripts]" error
[project.scripts]
server = "server.app:app"

[tool.setuptools]
packages = ["server"]
