[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "0.1.0"
dependencies = [
    "openenv",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests"
]

[project.scripts]
server = "server.app:app"

[tool.setuptools]
packages = ["server"]
